# didge

./: .gitignore  CLAUDE.md  docker-compose.deploy.yml  docker-compose.yml
.github/workflows/: publish-master-ghcr.yml
culinary-service/: Dockerfile  pyproject.toml
culinary-service/src/culinary_service/: auth.py  database.py  main.py  models.py  schemas.py  services.py
culinary-service/src/culinary_service/data/: base_ingredients.csv  tags.csv  units.csv
didge-frontend/: Dockerfile  angular.json  nginx.conf  tailwind.config.js
didge-frontend/src/: index.html
didge-frontend/src/app/: app.config.ts  app.spec.ts  app.ts
didge-frontend/src/environments/: environment.development.ts
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.ts
frontend/src/app/core/: auth-guard.ts  (+2 more)
frontend/src/environments/: environment.development.ts  environment.staging.ts  environment.ts
household-service/: Dockerfile  pyproject.toml
household-service/src/household_service/: auth.py  database.py  main.py  models.py
temp-project/: README.md  package-lock.json  package.json
temp-project/src/app/: guest-guard-guard.ts
user-auth-frontend/: README.md  angular.json  package-lock.json  package.json
user-auth-frontend/src/: styles.css
user-auth-frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  auth.ts  guest-guard.ts  recipe-service.ts
user-auth-frontend/src/environments/: environment.development.ts  environment.ts
user-service/: Dockerfile  README.md  auth.py  database.py  main.py  models.py  pyproject.toml
user-service/src/user_service/: auth.py  database.py  main.py  models.py
(+130 files in other folders)
